envoy2/envoy.yaml

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9096
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                http_filters:
                  
                - name: envoy.filters.http.router
                route_config:
                    name: local_route
                    virtual_hosts: 
                      - name: local_service
                        domains: ["*"]
                        routes:

                          - match:
                              prefix: "/customurl/"
                            route:
                              cluster_header: "x-cluster-header"
                              prefix_rewrite: "/publiccache/"


                          - match:
                              prefix: "/"
                            route:
                              cluster_header: "x-cluster-header"



  clusters:
    - name: varnish_backend_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: varnish_backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: varnish_new
                      port_value: 80
    - name: actual_backend_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: actual_backend_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 8083
